Added subscription listening only for high values

--- a/src/Sample.ServiceBusFiltering.Receiver/appsettings.json
+++ b/src/Sample.ServiceBusFiltering.Receiver/appsettings.json
@@ -1,6 +1,7 @@
 {
   "serviceBus": {
     "topicName": "temperature",
-    "subscriptionName": "ReaderSubscription"
+    "homeSubscriptionName": "homesubscription",
+    "highSubscriptionName": "highsubscription"
   }
 }
